# bazel-bazel

./: BUILD.bazel  README.md  WORKSPACE  bazel-bazel  bazel-bin  bazel-out  bazel-testlogs  foo.bzl
depsets/: BUILD.bazel  README.md  foo.bzl  foocc.py
foo/: BUILD.bazel  README.md  foo.bzl
hello_world/: BUILD.bazel  README.md  file.cc.tpl  hello_world.bzl
